--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
 		<div class="container">
 			<div class="navbar-brand">
 				<span class="navbar-logo">
-					<a href="https://mobiri.se">
+					<a href="https://тайны-влечения.рф">
 						<img src="assets/images/c318ea67ba8711f0ab246ef739cff788-137x137.png" alt="Mobirise Website Builder" style="height: 4.3rem;">
 					</a>
 				</span>
-				<span class="navbar-caption-wrap"><a class="navbar-caption text-black display-4" href="https://mobiri.se">Тайны Влечения</a></span>
+				<span class="navbar-caption-wrap"><a class="navbar-caption text-black display-4" href="https://тайны-влечения.рф">Тайны Влечения</a></span>
 			</div>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 				<div class="hamburger">
@@ -74,9 +74,9 @@
 						<a class="nav-link link text-black text-primary display-4" href="index.html#list01-3" aria-expanded="false">Статьи и советы</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link link text-black display-4" href="https://mobiri.se">Консультации</a>
+						<a class="nav-link link text-black display-4" href="index.html#list02-5">Консультации</a>
 					</li></ul>
-				<div class="navbar-buttons mbr-section-btn"><a class="btn btn-primary display-4" href="https://mobiri.se">Сообщество</a></div>
+				<div class="navbar-buttons mbr-section-btn"><a class="btn btn-primary display-4" href="https://kurs-vebinar.ru/1694876">Интерактив</a></div>
 			</div>
 		</div>
 	</nav>
@@ -94,7 +94,7 @@
 				<p class="mbr-fonts-style mbr-text mbr-white mb-4 display-7">
 					Откройте для себя секреты, которые помогут вам построить крепкие и счастливые отношения, наполненные теплом и взаимопониманием
 				</p>
-				<div class="mbr-section-btn"><a class="btn btn-danger display-7" href="https://mobiri.se">Узнать больше<br></a></div>
+				<div class="mbr-section-btn"><a class="btn btn-danger display-7" href="https://kurs-vebinar.ru/1694876">Узнать больше<br></a></div>
 			</div>
 		</div>
 	</div>
@@ -120,7 +120,7 @@
 <br>Моя миссия — вдохновить вас на создание крепких и счастливых отношений, где каждый день будет наполнен теплом и взаимопониманием. Я делюсь проверенными советами, провожу консультации и создаю сообщество, где вы всегда найдете поддержку и понимание.
 <br>
 <br>Присоединяйтесь к нам и откройте для себя новые горизонты в мире отношений и страсти!</p>
-					<div class="mbr-section-btn align-left mt-3"><a class="btn btn-success-outline display-7" href="https://mobiri.se">Узнать больше</a></div>
+					<div class="mbr-section-btn align-left mt-3"><a class="btn btn-success-outline display-7" href="https://kurs-vebinar.ru/1694876">Узнать больше</a></div>
 				</div>
 			</div>
 		</div>
