--- a/политика-конфиденциальности/index.html
+++ b/политика-конфиденциальности/index.html
@@ -79,9 +79,10 @@
         <p>Мы оставляем за собой право вносить изменения в данную политику конфиденциальности. Все изменения будут опубликованы на нашем сайте.</p>
 
         <h2>7. Контактная информация</h2>
-        <p>Если у вас есть вопросы или предложения относительно данной политики конфиденциальности, пожалуйста, свяжитесь с нами по адресу: <a href="тайны-влечения.рф">тайны-влечения.рф</a>.</p>
+        <p>Если у вас есть вопросы или предложения относительно данной политики конфиденциальности, пожалуйста, свяжитесь с нами по адресу: <a href="/">тайны-влечения.рф</a>.</p>
 
         <p>Спасибо за доверие!</p>
     </div>
 </body>
+
 </html>
