--- a/категории-статей/index.html
+++ b/категории-статей/index.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=fcJP75"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=fcJP75" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=iAAioY"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=iAAioY" type="text/css">
 
   
   
@@ -55,7 +55,7 @@
 						<img src="assets/images/c318ea67ba8711f0ab246ef739cff788-137x137.png" alt="Mobirise Website Builder" style="height: 4.3rem;">
 					</a>
 				</span>
-				<span class="navbar-caption-wrap"><a class="navbar-caption text-black text-primary display-4" href="index.html">Тайны Влечения</a></span>
+				<span class="navbar-caption-wrap"><a class="navbar-caption text-black text-primary display-4" href="https://тайны-влечения.рф">Тайны Влечения</a></span>
 			</div>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 				<div class="hamburger">
@@ -67,9 +67,9 @@
 			</button>
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-						<a class="nav-link link text-black text-primary display-4" href="index.html">На главную страницу</a>
+						<a class="nav-link link text-black text-primary display-4" href="https://тайны-влечения.рф">На главную страницу</a>
 					</li></ul>
-				<div class="navbar-buttons mbr-section-btn"><a class="btn btn-primary display-4" href="https://kurs-vebinar.ru/1694879">Интерактив</a></div>
+				<div class="navbar-buttons mbr-section-btn"><a class="btn btn-primary display-4" href="https://kurs-vebinar.ru/1694876">Интерактив</a></div>
 			</div>
 		</div>
 	</nav>
@@ -84,7 +84,7 @@
     <div class="row justify-content-center">
       <div class="card col-md-12 col-lg-10">
         <div class="card-wrapper">
-          <h3 class="card-title mbr-fonts-style mbr-white mt-3 mb-4 display-5"><strong>Категории и темы, которые актуальны <a href="https://kurs-vebinar.ru/1694879" class="text-primary" target="_blank">для укрепления отношений</a>:</strong>
+          <h3 class="card-title mbr-fonts-style mbr-white mt-3 mb-4 display-5"><strong>Категории и темы, которые актуальны <a href="https://kurs-vebinar.ru/1694876" class="text-primary" target="_blank">для укрепления отношений</a>:</strong>
           </h3>
           <div class="row card-box align-left">
             <div class="item features-without-image col-12">
@@ -154,7 +154,7 @@
 <br>- Как стать более уверенной в себе
 <br><br>Как стать более привлекательной  
 <br>- Советы по уходу за собой  
-<br>- Как раскрыть свою внутреннюю красоту<br><br>Также рекомендую всем женщинам потрясающий <a href="https://kurs-vebinar.ru/1694879" class="text-primary">курс </a>от коллеги по обучению в сфере создания качественных отношений, переходите и записывайтесь на <a href="https://kurs-vebinar.ru/1694879" class="text-primary">Вебинар</a></p>
+<br>- Как раскрыть свою внутреннюю красоту<br><br>Также рекомендую всем женщинам потрясающий <a href="https://kurs-vebinar.ru/1694876" class="text-primary">курс </a>от коллеги по обучению в сфере создания качественных отношений, переходите и записывайтесь на <a href="https://kurs-vebinar.ru/1694876" class="text-primary">Вебинар</a></p>
               </div>
             </div>
           </div>
@@ -175,11 +175,11 @@
         <div class="media-container-row align-center mbr-white">
             <div class="col-12">
                 <p class="mbr-text mb-0 mbr-fonts-style display-7">
-                    © Copyright 2025 Тайны Влечения - Все права защищены<br><a href="http://mail.com" class="text-primary">Политика конфиденциальности</a></p>
+                    © Copyright 2025 Тайны Влечения - Все права защищены<br><a href="https://тайны-влечения.рф/политика-конфиденциальности/" class="text-primary">Политика конфиденциальности</a></p>
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3280525" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-builder.html">AI Website Software</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3280525" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href=""></a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
