--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 					<li class="nav-item">
 						<a class="nav-link link text-black display-4" href="index.html#list02-5">Консультации</a>
 					</li></ul>
-				<div class="navbar-buttons mbr-section-btn"><a class="btn btn-primary display-4" href="https://kurs-vebinar.ru/1694876">Интерактив</a></div>
+				<div class="navbar-buttons mbr-section-btn"><a class="btn btn-primary display-4" href="https://тайны-влечения.рф/категории-статей/">Категории</a></div>
 			</div>
 		</div>
 	</nav>
